# agent-harness-template

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT_BOUNDARIES.md  QUICKSTART.md  README.md  TASK_SPEC.md  TEMPLATE_USAGE.md  TESTING.md  docker-compose.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: dependencies.py  main.py
apps/api/app/ai_runtime/: __init__.py  client.py  providers.py  router.py  structured_output.py
apps/api/app/contracts/: __init__.py  multi_user.py
apps/api/app/core/: config.py
apps/api/app/models/: __init__.py  artifact.py  conversation.py  (+3 more)
apps/api/tests/: conftest.py  test_agent_template.py  test_artifacts.py  test_checkpoints.py  test_conversation_api.py  test_eval_runner.py  test_example_agent_template.py  test_failure_retry_runtime.py  test_files.py  test_health.py  test_idempotency_guard.py  test_ingestion_pipeline.py  test_job_queue.py  test_knowledge.py  test_llm.py  test_module_registry.py  test_multi_user_contract.py  test_openai_compatible_provider.py  test_persistence.py  test_persistence_files_artifacts.py  test_persistence_knowledge.py  test_persistence_runs.py  test_policy_contract.py  test_provider_router.py  test_provider_runtime.py  test_rag_chunking.py  test_rag_embeddings.py  test_rag_pipeline.py  test_rag_retrieval_modes.py  test_rag_tenant.py  test_rag_vector_store.py  test_registries.py  test_runs.py  test_scaffold_agent.py  test_scaffold_docs.py  test_scaffold_eval.py  test_scaffold_module.py  test_scaffold_script.py  test_scaffold_validation.py  test_schema_contracts.py  (+8 more)
(+287 files in other folders)
